<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="101dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/play"
        app:layout_constraintStart_toEndOf="@+id/spinnerIntervalDown"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIntervalRight" />

    <Spinner
        android:id="@+id/spinnerIntervalDown"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="104dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIntervalUp" />

    <Spinner
        android:id="@+id/spinnerIntervalRight"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinnerIntervalDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIntervalUp" />

    <Spinner
        android:id="@+id/spinnerIntervalLeft"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinnerIntervalDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIntervalUp" />

    <Spinner
        android:id="@+id/spinnerIntervalUp"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="100dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="112dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="104dp"
        android:text="@string/check"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerIntervalDown"
        app:layout_constraintEnd_toStartOf="@+id/spinnerIntervalRight"
        app:layout_constraintStart_toEndOf="@+id/spinnerIntervalLeft"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIntervalUp" />

    <Button
        android:id="@+id/buttonSurrender"
        android:layout_width="133dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/surrender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/music_squares"
        android:textAlignment="center"
        android:textColor="#FDFCFC"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>